# snakewood

./: Cargo.toml  README.md
crates/snakewood-core/: Cargo.toml
crates/snakewood-core/src/: direction.rs  id.rs  lib.rs  mob.rs  presentation.rs  realm.rs  serialize.rs  world.rs
crates/snakewood-core/src/fabric/: dispatch.rs  gather.rs  handler.rs  intent.rs  mod.rs  operator.rs  predicate.rs  resolve.rs  trigger.rs
crates/snakewood-core/src/store/: git.rs  memory.rs  mod.rs
crates/snakewood-core/tests/: goblin_scenario.rs  realm_persistence.rs  roundtrip.rs
crates/snakewood-core/tests/golden/: clearing.ron
crates/snakewood-daemon/: Cargo.toml
crates/snakewood-daemon/src/: clock.rs  engine.rs  lib.rs  main.rs  session.rs
crates/snakewood-daemon/src/api/: handler.rs  mod.rs  protocol.rs  server.rs
crates/snakewood-daemon/src/mcp/: client.rs  dispatch.rs  mod.rs  protocol.rs  tools.rs
crates/snakewood-daemon/tests/: api_e2e.rs  engine_goblin.rs  mcp_bridge.rs  persistence_restart.rs  telnet_e2e.rs
docs/superpowers/plans/: 2026-07-02-m1-stage1-foundations.md  2026-07-02-m1-stage2-event-fabric.md  2026-07-02-m1-stage3a-daemon-engine.md  2026-07-02-m1-stage3b-persistence.md  2026-07-02-m1-stage3b-scheduler.md  2026-07-02-m1-stage3c-telnet.md  2026-07-02-m1-stage3d-mcp-bridge.md  2026-07-02-m1-stage3d-structured-api.md  2026-07-03-snakewood-m2-operators.md  2026-07-03-snakewood-m2-presentation.md
docs/superpowers/specs/: 2026-07-02-snakewood-mud-design.md  2026-07-03-snakewood-m2-operators-design.md  2026-07-03-snakewood-m2-presentation-design.md
(+6 files in other folders)
