[package]
name = "snakewood-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
ron = { workspace = true }
git2 = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
